<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mainmenu"
      
        android:showAsAction="always"
         android:icon="@drawable/ic_launcher"
        android:title="always">
        <menu>
         <item
        android:id="@+id/action_show_normal"
   
       
         android:icon="@drawable/list_fullimg"
        android:title="@string/show_normal"/>
           <item
        android:id="@+id/action_show_mini"
  
        android:icon="@drawable/list_imgtext"
        android:title="@string/show_mini"/>
    
    <item
        android:id="@+id/action_show_text"
         android:icon="@drawable/list_textonly"
        android:title="@string/show_text_only"/>
    
      <item
        android:id="@+id/action_show_grid"
         android:icon="@drawable/list_imgonly2"
        android:title="@string/show_grid"/>
    </menu>
    </item>

 
    
    
    
</menu>
